FP32_SGEMM_RVV_Vector_Kernel_16×8_/sgemm_kernel_16x8_zvl256b_lmul1_unroll4/benchmark_16x8_lmul1_unroll4_20260306_202353.log
=======================================
RVV SGEMM BENCHMARK (16x8 - LMUL 1 - Unroll 4 - zvl256b)
Each shape runs 6 times
=======================================
rm -f bench
gcc -O3 -march=rv64gcv_zvl256b -mabi=lp64d -std=c11 -Wall -Wno-unknown-pragmas -DCNAME=sgemm_kernel_16x8_zvl256b sgemm_kernel_16x8_zvl256b_lmul1_unroll4.c sgemm_bench.c -o bench
sgemm_kernel_16x8_zvl256b_lmul1_unroll4.c: In function ‘sgemm_kernel_16x8_zvl256b’:
sgemm_kernel_16x8_zvl256b_lmul1_unroll4.c:911:69: error: incompatible type for argument 3 of ‘__riscv_vfmacc_vf_f32m1’
  911 |             vfloat32m1_t result0 = __riscv_vfmacc_vf_f32m1( A0, B0, gvl);
      |                                                                     ^~~
      |                                                                     |
      |                                                                     BLASLONG {aka long int}
In file included from sgemm_kernel_16x8_zvl256b_lmul1_unroll4.c:11:
/usr/lib/gcc/riscv64-linux-gnu/14/include/riscv_vector.h:40:9: note: expected ‘vfloat32m1_t’ but argument is of type ‘BLASLONG’ {aka ‘long int’}
   40 | #pragma riscv intrinsic "vector"
      |         ^~~~~
sgemm_kernel_16x8_zvl256b_lmul1_unroll4.c:911:36: error: too few arguments to function ‘__riscv_vfmacc_vf_f32m1’
  911 |             vfloat32m1_t result0 = __riscv_vfmacc_vf_f32m1( A0, B0, gvl);
      |                                    ^~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/gcc/riscv64-linux-gnu/14/include/riscv_vector.h:40:9: note: declared here
   40 | #pragma riscv intrinsic "vector"
      |         ^~~~~
sgemm_kernel_16x8_zvl256b_lmul1_unroll4.c:912:69: error: incompatible type for argument 3 of ‘__riscv_vfmacc_vf_f32m1’
  912 |             vfloat32m1_t result1 = __riscv_vfmacc_vf_f32m1( A1, B0, gvl);
      |                                                                     ^~~
      |                                                                     |
      |                                                                     BLASLONG {aka long int}
/usr/lib/gcc/riscv64-linux-gnu/14/include/riscv_vector.h:40:9: note: expected ‘vfloat32m1_t’ but argument is of type ‘BLASLONG’ {aka ‘long int’}
   40 | #pragma riscv intrinsic "vector"
      |         ^~~~~
sgemm_kernel_16x8_zvl256b_lmul1_unroll4.c:912:36: error: too few arguments to function ‘__riscv_vfmacc_vf_f32m1’
  912 |             vfloat32m1_t result1 = __riscv_vfmacc_vf_f32m1( A1, B0, gvl);
      |                                    ^~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/gcc/riscv64-linux-gnu/14/include/riscv_vector.h:40:9: note: declared here
   40 | #pragma riscv intrinsic "vector"
      |         ^~~~~
make: *** [Makefile:10: bench] Error 1
Compilation failed! Please run 'make' manually to see the error.
